# debian-lzop

./: Makefile.am  Makefile.in  NEWS  aclocal.m4  config.hin  configure  configure.ac
B/dos16/: bc.bat  bc_286.bat  bc_pp.bat  dm.bat  mc.bat  sc.bat  tc.bat  vc.bat  wc.bat
B/dos32/: dj2.bat  dm.bat  emx.bat  highc.bat  ndp.bat  sc.bat  wc.bat  wc_c.bat  wc_d.bat  wc_p.bat  zc.bat
B/generic/: build.sh  build_gcc.sh  clean.sh
B/os2/: bc.cmd  emx.bat  emx.cmd  va.cmd  wc.bat  wc.cmd  zc.bat
B/os2_16/: mc.bat  sc.cmd  wc.bat  wc.cmd
B/win16/: bc.bat  sc.bat  vc.bat  wc.bat
B/win32/: bc.bat  cygwin.bat  dm.bat  ic.bat  lccwin32.bat  mingw.bat  pellesc.bat  pgi.bat  pw32.bat  rsxnt.bat  sc.bat  sc.rsp  vc.bat  wc.bat
B/win64/: ic.bat  vc.bat
debian/: changelog  control  lintian-overrides
doc/: Makefile.am  Makefile.in  lzop.1  lzop.html  lzop.man  lzop.pod  lzop.ps  lzop.tex  lzop.txt
src/: Makefile.am  Makefile.in  c_ansic.c  c_ansim.c  c_init.c  c_none.c  c_screen.c  compress.c  conf.h  console.h  djgpp2.c  filter.c  frames.c  frames.h  help.c  lzop.c  mblock.c  miniacc.h  p_lzo.c  s_curses.c  s_djgpp2.c  s_object.c  s_vcsa.c  screen.h  util.c
